        **                                         **
        **   CHANGES IN DATA.TABLE VERSION 1.7.1   **
        **                                         **
        *********************************************

BUG FIXES

    o   .SD is now locked, partially fixing #1624. It was never
        the intention to allow assignment to .SD. Take a 'copy(.SD)'
        first if needed. Now documented in ?data.table and example
        in new FAQ 4.5. Thanks to Steve Lianoglou for reporting.


        *********************************************
        **                                         **
        **   CHANGES IN DATA.TABLE VERSION 1.7.0   **
        **                                         **
        *********************************************

NEW FEATURES

    o   data.table() now accepts list columns directly rather than
        needing to add list columns to an existing data.table; e.g.,
        
            DT = data.table(x=1:3,y=list(4:6,3.14,matrix(1:12,3)))
            
        Thanks to Branson Owen for reminding. As before, list columns
        can be created via grouping; e.g.,
        
            DT = data.table(x=c(1,1,2,2,2,3,3),y=1:7)
            DT2 = DT[,list(list(unique(y))),by=x]
            DT2
                 x      V1
            [1,] 1    1, 2
            [2,] 2 3, 4, 5
            [3,] 3    6, 7
            
        and list columns can be grouped; e.g.,
        
            DT2[,sum(unlist(V1)),by=list(x%%2)]
                 x V1
            [1,] 1 16
            [2,] 0 12
            
        Accordingly, one item has been added to FAQ 2.17 (differences
        between data.frame and data.table): data.frame(list(1:2,"k",1:4))
        creates 3 columns, data.table creates one list column.

    o   subset, transform and within now retain keys when the expression
        does not 'touch' key columns, implemeting FR #1341.

    o   Recycling list() items on RHS of := now works; e.g.,
    